--- a/documentation/themes/themes-compiling.asciidoc
+++ b/documentation/themes/themes-compiling.asciidoc
@@ -29,8 +29,8 @@ all its dependencies to be in the class path of the servlet. At least for
 production, you must compile the theme to CSS, as described next.
 
 NOTE: If the on-the-fly compilation does not seem to work, ensure that your build script has not generated a pre-compiled CSS file.
-If [filename]#styles.css# file is found the servlet, the compilation is skipped.
-Delete such an existing [filename]#styles.css# file and disable theme compilation temporarily.
+If a [filename]#styles.css# file is found by the servlet, the compilation is skipped.
+Delete such an existing [filename]#styles.css# file, disable theme compilation temporarily and re-enable it to start on-the-fly compilation again.
 
 [[themes.compiling.eclipse]]
 == Compiling in Eclipse
