--- a/documentation/components/components-grid.asciidoc
+++ b/documentation/components/components-grid.asciidoc
@@ -621,6 +621,7 @@ grid.addColumn(person -> {
       }, new ComponentRenderer());
 ----
 
+Components in Grid ComponentRenderer are wrapped in a [literal]#++div++# with the style name [literal]#++component-wrap++#. This can be used to style the alignment and size of the component.
 
 [[components.grid.renderer.custom]]
 === Custom Renderers
