--- a/documentation/advanced/advanced-osgi.asciidoc
+++ b/documentation/advanced/advanced-osgi.asciidoc
@@ -194,16 +194,45 @@ bundle:install -s mvn:com.vaadin.external.atmosphere/atmosphere-runtime/2.4.11.v
 bundle:install -s mvn:com.vaadin/vaadin-push/8.1.0
 ----
 
-Here is a Karaf feature specification:
+When using push with any container, it is important that your version of Jetty/Tomcat is compatible with Vaadin's
+port of Atmosphere.  The server log will report errors and the browser console will display a fallback warning
+if there are incompatibilities.
+
+= Karaf Features
+Using a Karaf feature is the easiest way to install and maintain the required bundles.
+
+== Adding The Feature
+You can add the feature file using the _repo-add_ command, or by placing it in your Karaf _deploy directory_
 
 [source]
 ----
-feature:install vaadin-all
+> feature:repo-add file:vaadin-feature.xml
 ----
+or
+[source]
+----
+<path-to-karaf>/karaf/deploy/vaadin-feature.xml
+----
+
+== Installing The Feature
+After adding the feature, use the following command to install the Vaadin OSGi framework.
+
+[source]
+----
+> feature:install vaadin-osgi-core 
+----
+or
+[source]
+----
+> feature:install vaadin-osgi-push 
+----
+
+== file: vaadin-feature.xml
+Here is a preliminary Karaf feature:
 
 [source, xml]
 ----
-<features name="vaadin-osgi" xmlns="http://karaf.apache.org/xmlns/features/v1.0.0">
+<features name="vaadin-osgi" version="8.1.0" xmlns="http://karaf.apache.org/xmlns/features/v1.0.0">
 
     <feature name="vaadin-osgi-deps">
         <bundle>mvn:org.jsoup/jsoup/1.8.3</bundle>
@@ -222,14 +251,11 @@ feature:install vaadin-all
     </feature>
 
     <feature name="vaadin-osgi-push">
+        <feature>vaadin-osgi-core</feature>
+        
         <bundle>mvn:com.vaadin/vaadin-push/8.1.0</bundle>
         <bundle>mvn:com.vaadin.external.atmosphere/atmosphere-runtime/2.4.11.vaadin1</bundle>
         <bundle>mvn:com.vaadin.external.slf4j/vaadin-slf4j-jdk14/1.6.1</bundle>
-    </feature>
-
-    <feature name="vaadin-all">
-        <feature>vaadin-osgi-core</feature>
-        <feature>vaadin-osgi-push</feature>
     </feature>
 
 </features>
