--- a/documentation/portal/portal-osgi.asciidoc
+++ b/documentation/portal/portal-osgi.asciidoc
@@ -74,16 +74,15 @@ The required bundles (and the application as well) can be installed using link:h
 The latest client binary can be downloaded from the link: link:https://releases.liferay.com/tools/blade-cli/latest/blade.jar[]
 
 Here is an example script for doing that:
-//TODO change URLs to maven central when 8.1 is out
 [source, shell]
 ----
 java -jar blade.jar sh start https://repo1.maven.org/maven2/org/jsoup/jsoup/1.8.3/jsoup-1.8.3.jar
 java -jar blade.jar sh start https://repo1.maven.org/maven2/com/vaadin/external/gentyref/1.2.0.vaadin1/gentyref-1.2.0.vaadin1.jar
-java -jar blade.jar sh start https://maven.vaadin.com/vaadin-prereleases/com/vaadin/vaadin-shared/8.1.0.beta1/vaadin-shared-8.1.0.beta1.jar
-java -jar blade.jar sh start https://maven.vaadin.com/vaadin-prereleases/com/vaadin/vaadin-server/8.1.0.beta1/vaadin-server-8.1.0.beta1.jar
-java -jar blade.jar sh start https://maven.vaadin.com/vaadin-prereleases/com/vaadin/vaadin-osgi-integration/8.1.0.beta1/vaadin-osgi-integration-8.1.0.beta1.jar
-java -jar blade.jar sh start https://maven.vaadin.com/vaadin-prereleases/com/vaadin/vaadin-client-compiled/8.1.0.beta1/vaadin-client-compiled-8.1.0.beta1.jar
-java -jar blade.jar sh start https://maven.vaadin.com/vaadin-prereleases/com/vaadin/vaadin-themes/8.1.0.beta1/vaadin-themes-8.1.0.beta1.jar
-java -jar blade.jar sh start https://maven.vaadin.com/vaadin-prereleases/com/vaadin/vaadin-liferay-integration/8.1.0.beta1/vaadin-liferay-integration-8.1.0.beta1.jar
+java -jar blade.jar sh start https://repo1.maven.org/maven2/com/vaadin/vaadin-shared/8.1.0/vaadin-shared-8.1.0.jar
+java -jar blade.jar sh start https://repo1.maven.org/maven2/com/vaadin/vaadin-server/8.1.0/vaadin-server-8.1.0.jar
+java -jar blade.jar sh start https://repo1.maven.org/maven2/com/vaadin/vaadin-osgi-integration/8.1.0/vaadin-osgi-integration-8.1.0.jar
+java -jar blade.jar sh start https://repo1.maven.org/maven2/com/vaadin/vaadin-client-compiled/8.1.0/vaadin-client-compiled-8.1.0.jar
+java -jar blade.jar sh start https://repo1.maven.org/maven2/com/vaadin/vaadin-themes/8.1.0/vaadin-themes-8.1.0.jar
+java -jar blade.jar sh start https://repo1.maven.org/maven2/com/vaadin/vaadin-liferay-integration/8.1.0/vaadin-liferay-integration-8.1.0.jar
 java -jar blade.jar sh start file:<path_to_liferay_portlet.jar>
 ----
