--- a/documentation/themes/themes-compiling.asciidoc
+++ b/documentation/themes/themes-compiling.asciidoc
@@ -30,8 +30,8 @@ production, you must compile the theme to CSS, as described next.
 
 NOTE: If the on-the-fly compilation does not seem to work, ensure that your build script has not generated a pre-compiled CSS file.
 If a [filename]#styles.css# file is found by the servlet, the compilation is skipped.
-Disable team compilation in your local development encironment and delete such an
-existing [filename]#styles.css# file to enable on-the-fly compilation. Note that
+Disable theme compilation in your local development environment and delete the existing
+[filename]#styles.css# file to enable on-the-fly compilation. Note that
 theme compilation should not be disabled for production builds.
 
 [[themes.compiling.eclipse]]
