Revert "Update components-grid.asciidoc (#9813)"
This reverts commit 1f878089dec6c03090efbcc79b08edbfbffb7620.

--- a/documentation/components/components-grid.asciidoc
+++ b/documentation/components/components-grid.asciidoc
@@ -579,7 +579,7 @@ Column<Person, LocalDateTime> bornColumn =
 [classname]#ComponentRenderer#:: Renders a Vaadin [classname]#Component# in a column. Since components
 are quite complex, the [classname]#ComponentRenderer# comes with possible performance issues.
 To use it efficiently you should use as few nested components as possible. If the components used are
-of a different size than the default row height, [methodname]#Grid.setBodyRowHeight()# can be used to adjust
+of a different size than the default row height, [methodname]#Grid.setRowHeight()# can be used to adjust
 the height of all rows in the Grid.
 
 +
@@ -593,7 +593,7 @@ grid.addComponentColumn(person -> {
       return button;
 });
 // make sure the buttons fit in the cells of the Grid
-grid.setBodyRowHeight(40);
+grid.setRowHeight(40);
 ----
 +
 Components will occasionally be generated again during runtime. If you have a state in your
