--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -10,8 +10,10 @@ are great, too.
 
 [discrete]
 == Articles
-- link:DevelopingPortletsForTheWebspherePortalServer.asciidoc[Developing Portlets for the Websphere Portal Server]
+- link:DevelopingPortletsForTheWebspherePortalServer.asciidoc[Developing portlets for the Websphere Portal Server]
 - link:ConfigureComboBoxesWisely.asciidoc[Configure ComboBoxes wisely]
 - link:LettingTheUserDownloadAFile.asciidoc[Letting the user download a file]
 - link:UsingVaadinInIBMDomino.asciidoc[Using Vaadin in IBM Domino]
-- link:VaadinTutorialForSwingDevelopers.asciidoc[Vaadin Tutorial For Swing Developers]
+- link:VaadinTutorialForSwingDevelopers.asciidoc[Vaadin tutorial for Swing developers]
+- link:SettingAndReadingSessionAttributes.asciidoc[Setting and reading session attributes]
+- link:EnablingServerPush.asciidoc[Enabling server push]
