Migrate articles ConfiguringPushForYourEnviroment.asciidoc, SettingAndReadingCookies.asciidoc, UsingPolling.asciidoc

--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -21,3 +21,6 @@ are great, too.
 - link:SendingEmailFromJavaApplications.asciidoc[Sending email from Java applications]
 - link:OptimizingSluggishUI.asciidoc[Optimizing sluggish UI]
 - link:UsingParametersWithViews.asciidoc[Using parameters with views]
+- link:ConfiguringPushForYourEnviroment.asciidoc[Configuring push for your environment]
+- link:SettingAndReadingCookies.asciidoc[Setting and reading cookies]
+- link:UsingPolling.asciidoc[Using polling]
