--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -24,3 +24,6 @@ are great, too.
 - link:ConfiguringPushForYourEnviroment.asciidoc[Configuring push for your environment]
 - link:SettingAndReadingCookies.asciidoc[Setting and reading cookies]
 - link:UsingPolling.asciidoc[Using polling]
+- link:FindingTheCurrentUIAndPageAndVaadinSession.asciidoc[Finding the current UI and page and Vaadin Session]
+- link:CreatingAnApplicationTHatPreservesStateOnRefresh.asciidoc[Creating an application that preserves state on refresh]
+- link:SendingEventsFromTheClientToTheServerUsingRPC.asciidoc[Sending events from the client to the server using RPC]
