--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -31,3 +31,4 @@ are great, too.
 - link:ScalableWebApplications.asciidoc[Scalable web applications]
 - link:RememberToTheSetTheLocale.asciidoc[Remember to the set the locale]
 - link:MVCBasicsInITMillToolkit.asciidoc[MVC Basics in IT Mill Toolkit]
+- link:CustomizingTheStartupPageInAnApplication.asciidoc[Customizing the startup page in an application]
