--- a/documentation/articles/CustomizingTheStartupPageInAnApplication.asciidoc
+++ b/documentation/articles/CustomizingTheStartupPageInAnApplication.asciidoc
@@ -1,3 +1,7 @@
+[[customizing-the-startup-page-in-an-application]]
+Customizing the startup page in an application
+----------------------------------------------
+
 In Vaadin 6, the startup page - used to bootstrap a new Vaadin UI
 instance in the browser - was generated as a monolithic chunk of HTML
 and was not easily customizable. In Vaadin 7, we added a new facility
@@ -10,7 +14,6 @@ Here's an example of a simple bootstrap listener:
 
 [source,java]
 ....
-
 import org.jsoup.nodes.Comment;
 import org.jsoup.nodes.Element;
 import org.jsoup.nodes.Node;
