--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -10,7 +10,25 @@ are great, too.
 
 [discrete]
 == Articles
-- link:DevelopingPortletsForTheWebspherePortalServer.asciidoc[Developing Portlets for the Websphere Portal Server]
+- link:DevelopingPortletsForTheWebspherePortalServer.asciidoc[Developing portlets for the WebSphere Portal Server]
 - link:ConfigureComboBoxesWisely.asciidoc[Configure ComboBoxes wisely]
 - link:LettingTheUserDownloadAFile.asciidoc[Letting the user download a file]
 - link:UsingVaadinInIBMDomino.asciidoc[Using Vaadin in IBM Domino]
+- link:VaadinTutorialForSwingDevelopers.asciidoc[Vaadin tutorial for Swing developers]
+- link:SettingAndReadingSessionAttributes.asciidoc[Setting and reading session attributes]
+- link:EnablingServerPush.asciidoc[Enabling server push]
+- link:CleaningUpResourcesInAUI.asciidoc[Cleaning up resources in a UI]
+- link:SendingEmailFromJavaApplications.asciidoc[Sending email from Java applications]
+- link:OptimizingSluggishUI.asciidoc[Optimizing sluggish UI]
+- link:UsingParametersWithViews.asciidoc[Using parameters with views]
+- link:ConfiguringPushForYourEnviroment.asciidoc[Configuring push for your environment]
+- link:SettingAndReadingCookies.asciidoc[Setting and reading cookies]
+- link:UsingPolling.asciidoc[Using polling]
+- link:FindingTheCurrentUIAndPageAndVaadinSession.asciidoc[Finding the current UI and page and Vaadin Session]
+- link:CreatingAnApplicationThatPreservesStateOnRefresh.asciidoc[Creating an application that preserves state on refresh]
+- link:SendingEventsFromTheClientToTheServerUsingRPC.asciidoc[Sending events from the client to the server using RPC]
+- link:HandlingLogout.asciidoc[Handling logout]
+- link:ScalableWebApplications.asciidoc[Scalable web applications]
+- link:RememberToTheSetTheLocale.asciidoc[Remember to the set the locale]
+- link:MVCBasicsInITMillToolkit.asciidoc[MVC Basics in IT Mill Toolkit]
+- link:CustomizingTheStartupPageInAnApplication.asciidoc[Customizing the startup page in an application]
