--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -21,7 +21,7 @@ are great, too.
 - link:SendingEmailFromJavaApplications.asciidoc[Sending email from Java applications]
 - link:OptimizingSluggishUI.asciidoc[Optimizing sluggish UI]
 - link:UsingParametersWithViews.asciidoc[Using parameters with views]
-- link:ConfiguringPushForYourEnviroment.asciidoc[Configuring push for your environment]
+- link:ConfiguringPushForYourEnvironment.asciidoc[Configuring push for your environment]
 - link:SettingAndReadingCookies.asciidoc[Setting and reading cookies]
 - link:UsingPolling.asciidoc[Using polling]
 - link:FindingTheCurrentUIAndPageAndVaadinSession.asciidoc[Finding the current UI and page and Vaadin Session]
@@ -32,3 +32,6 @@ are great, too.
 - link:RememberToTheSetTheLocale.asciidoc[Remember to the set the locale]
 - link:MVCBasicsInITMillToolkit.asciidoc[MVC Basics in IT Mill Toolkit]
 - link:CustomizingTheStartupPageInAnApplication.asciidoc[Customizing the startup page in an application]
+- link:UsingURIFragments.asciidoc[Using URI fragments]
+- link:AccessingWebPageAndBrowserInformation.asciidoc[Accessing web page and browser information]
+- link:GeneratingDynamicResourcesBasedOnURIOrParameters.asciidoc[Generating dynamic resources based on URI or parameters]
