--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -35,3 +35,4 @@ are great, too.
 - link:UsingURIFragments.asciidoc[Using URI fragments]
 - link:AccessingWebPageAndBrowserInformation.asciidoc[Accessing web page and browser information]
 - link:GeneratingDynamicResourcesBasedOnURIOrParameters.asciidoc[Generating dynamic resources based on URI or parameters]
+- link:OptimizingTheWidgetSet.asciidoc[Optimizing the widget set]
