--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -38,3 +38,4 @@ are great, too.
 - link:OptimizingTheWidgetSet.asciidoc[Optimizing the widget set]
 - link:UsingServerInitiatedEvents.asciidoc[Using server-initiated events]
 - link:ChooseInputFieldComponentsWisely.asciidoc[Choose input field components wisely]
+- link:CreatingASimpleComponent.asciidoc[Creating a simple component]
