--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -41,3 +41,4 @@ are great, too.
 - link:CreatingASimpleComponent.asciidoc[Creating a simple component]
 - link:IntegratingAnExistingGWTWidget.asciidoc[Integrating an existing GWT widget]
 - link:IntegrationExperiences.asciidoc[Integration experiences]
+- link:VaadinOnGrailsCreateProjectInIntelliJIDEA.asciidoc[Vaadin on grails - Create project in IntelliJ IDEA]
