--- a/documentation/articles/contents.asciidoc
+++ b/documentation/articles/contents.asciidoc
@@ -43,3 +43,4 @@ are great, too.
 - link:IntegrationExperiences.asciidoc[Integration experiences]
 - link:VaadinOnGrailsCreateProjectInIntelliJIDEA.asciidoc[Vaadin on grails - Create project in IntelliJ IDEA]
 - link:VaadinOnGrailsDatabaseAccess.asciidoc[Vaadin on grails - Database access]
+- link:VaadinOnGrailsMultipleUIs.asciidoc[Vaadin on grails - Multiple UIs]
